# nxp-rf-driver

./: .yotta.json  README.md  module.json
nxp-rf-driver/: BbcAndPhyRegs.h  MMAC.h  xcv_reg.h
source/: CMakeLists.txt  MMAC.c  MMAC_MBED_RFInterface.c  MMAC_RadioInit_JN517x.c  MicroInt_arm.c
